# chatty

./: .gitignore  check_safetensors.py  qwen3-0.6B.txt  run_transformers.py  test_packer.py
include/chatty/: chatty.h
include/flatbuffers/: model.fbs  model_generated.h
include/flatbuffers/generate/: model.fbs  update_fbs.sh
pychatty/packer/: qwen3_packer.py  serialize.py
pychatty/packer/chatty_fbs/: ActLayer.py  ActivationBits.py  AttentionLayer.py  DType.py  LinearLayer.py  Model.py  Norm.py  ScaleInfo.py  Tensor.py  TransformerLayer.py  __init__.py
pychatty/packer/fbs/chatty_fbs/: AttentionLayer.py  FFNLayer.py  ScaleInfo.py
pychatty/packer/utils/: __init__.py  config.py  fbs_utils.py  key_map.py  read_config.py  read_safetensors.py  tokenizer.py
scripts/: linux_cuda.sh
src/: CMakeLists.txt  chatty.cc  main.cu
src/core/: log.h
src/executor/: attention_block.cc  attention_block.h  executor.h  executor.hpp  ffn_block.h  mlp_block.h
src/executor/cuda/: CMakeLists.txt  cuda_attention_block.cu  cuda_attention_block.cuh  cuda_executor.cc  cuda_executor.h  cuda_op_api.h  cuda_op_api.hpp
src/executor/cuda/cuda_op_api/: add.cu  add.cuh  linear.cu  linear.cuh
src/framework/: dtype.h  dtype.hpp  kvcache.h  model.cc  model.h  model.hpp  shape.h  status.hpp  tensor.h  tensor.hpp
src/tokenizer/: bpe_tokenizer.h  tokenizer.h
test/: CMakeLists.txt
test/test_cuda/: CMakeLists.txt  test_cuda.cc
